# codecraft-ai

./: .env.example  README.md  pyproject.toml
src/codecraft_ai/: api.py  cli.py  commit_cli.py  commit_splitter.py  docs_generator.py  jacoco.py
tests/: test_commit_generator.py  test_commit_splitter.py  test_conventional_commit.py  test_git_operations.py  test_github_client.py  test_gitlab_client.py
